--- a/pokemons.css
+++ b/pokemons.css
@@ -66,7 +66,7 @@
     img {
       float: right;
       margin-left: 20px;
-      max-width: 200px;
+      width: 150px;
     }
     
     .clearfix {
@@ -94,3 +94,5 @@
       background-color: #efefef;
       padding: 6px 6px 6px 12px;
     }
+
+    
