--- a/pokemons.css
+++ b/pokemons.css
@@ -62,8 +62,9 @@ header h2 {
     
 button {
   border: none;
+  border-radius: 50px;
   background-color: #e4000f;
-  padding: 8px;
+  padding: 8px 12px;
 }
   
 button:hover {
@@ -72,16 +73,25 @@ button:hover {
   
 input {
   border: none;
+  border-radius: 50px;
+  box-shadow: 1px 0px 5px #00000036; 
   padding: 6px 6px 6px 12px;
   min-width: 300px;
   text-align: center;
 }
-
+input:focus {
+  border: none;
+  border-radius: 50px;
+  box-shadow: 1px 0px 15px #00000036; 
+  padding: 6px 6px 6px 12px;
+  min-width: 300px;
+  text-align: center;
+}
 /* Results */
 
 section {
   flex-flow: column;
-  max-width: 350px;
+  max-width: 500px;
   margin:auto;
   text-transform: capitalize;
 }
